--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -10,6 +10,9 @@ resources:
 jobs:
 - job: Windows
 
+  pool:
+    vmImage: 'vs2017-win2016'
+
   variables: 
     BuildConfiguration: Release
     
