--- a/Microsoft.Toolkit.Uwp.SampleApp.Wasm/wwwroot/web.config
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Wasm/wwwroot/web.config
@@ -1,30 +1,78 @@
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<system.webServer>
-		<urlCompression doStaticCompression="true" doDynamicCompression="true" />
-		
-		<httpCompression directory="%SystemDrive%\inetpub\temp\IIS Temporary Compressed Files">
-			<scheme name="gzip" dll="%Windir%\system32\inetsrv\gzip.dll" staticCompressionLevel="9" />
-			<dynamicTypes>
-				<add mimeType="text/*" enabled="true" />
-				<add mimeType="message/*" enabled="true" />
-				<add mimeType="application/x-javascript" enabled="true" />
-				<add mimeType="application/wasm" enabled="true" />
-				<add mimeType="application/octet-stream" enabled="true" />
-				<add mimeType="*/*" enabled="false" />
-			</dynamicTypes>
-			<staticTypes>
-				<add mimeType="text/*" enabled="true" />
-				<add mimeType="message/*" enabled="true" />
-				<add mimeType="application/x-javascript" enabled="true" />
-				<add mimeType="application/wasm" enabled="true" />
-				<add mimeType="application/octet-stream" enabled="true" />
-				<add mimeType="*/*" enabled="false" />
-			</staticTypes>
-		</httpCompression>
-		
-		<staticContent>
-			<mimeMap fileExtension=".wasm" mimeType="application/wasm" />
-			<mimeMap fileExtension=".clr" mimeType="application/octet-stream" />
-		</staticContent>
-	</system.webServer>
+  <system.web>
+    <customErrors mode="Off"/>
+  </system.web>
+
+  <system.webServer>
+
+    <!-- Disable compression as we're doing it throuh pre-compressed files -->
+    <urlCompression doStaticCompression="false" doDynamicCompression="false" dynamicCompressionBeforeCache="false" />
+
+    <staticContent>
+      <remove fileExtension=".dll" />
+      <remove fileExtension=".wasm" />
+      <remove fileExtension=".woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".wasm" mimeType="application/wasm" />
+      <mimeMap fileExtension=".clr" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".pdb" mimeType="application/octet-stream" />
+      <mimeMap fileExtension=".woff" mimeType="application/font-woff" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff" />
+
+      <!-- Required for PWAs -->
+      <mimeMap fileExtension=".json" mimeType="application/octet-stream" />
+    </staticContent>
+
+    <rewrite>
+      <rules>
+        <rule name="Lookup for pre-compressed brotli file" stopProcessing="true">
+          <match url="(.*)$"/>
+          <conditions>
+            <!-- Match brotli requests -->
+            <add input="{HTTP_ACCEPT_ENCODING}" pattern="br" />
+
+            <!-- Match all but pre-compressed files -->
+            <add input="{REQUEST_URI}" pattern="^(?!/_compressed_br/)(.*)$" />
+
+            <!-- Check if the pre-compressed file exists on the disk -->
+            <add input="{DOCUMENT_ROOT}/_compressed_br/{C:0}" matchType="IsFile" negate="false" />
+          </conditions>
+          <action type="Rewrite" url="/_compressed_br{C:0}" />
+        </rule>
+
+        <rule name="Lookup for pre-compressed gzip file" stopProcessing="true">
+          <match url="(.*)$"/>
+          <conditions>
+            <!-- Match gzip requests -->
+            <add input="{HTTP_ACCEPT_ENCODING}" pattern="gzip" />
+
+            <!-- Match all but pre-compressed files -->
+            <add input="{REQUEST_URI}" pattern="^(?!/_compressed_gz/)(.*)$" />
+
+            <!-- Check if the pre-compressed file exists on the disk -->
+            <add input="{DOCUMENT_ROOT}/_compressed_gz/{C:0}" matchType="IsFile" negate="false" />
+          </conditions>
+          <action type="Rewrite" url="/_compressed_gz{C:0}" />
+        </rule>
+      </rules>
+
+      <outboundRules>
+        <rule name="Adjust content encoding for gzip pre-compressed files" enabled="true" stopProcessing="true">
+          <match serverVariable="RESPONSE_CONTENT_ENCODING" pattern="" />
+          <conditions>
+            <add input="{REQUEST_URI}" pattern="/_compressed_gz/.*$" />
+          </conditions>
+          <action type="Rewrite" value="gzip"/>
+        </rule>
+        <rule name="Adjust content encoding for brotli pre-compressed files" enabled="true" stopProcessing="true">
+          <match serverVariable="RESPONSE_CONTENT_ENCODING" pattern="" />
+          <conditions>
+            <add input="{REQUEST_URI}" pattern="/_compressed_br/.*$" />
+          </conditions>
+          <action type="Rewrite" value="br"/>
+        </rule>
+      </outboundRules>
+    </rewrite>
+  </system.webServer>
 </configuration>
