--- a/Microsoft.Toolkit.Uwp.SampleApp.Droid/Microsoft.Toolkit.Uwp.SampleApp.Droid.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Droid/Microsoft.Toolkit.Uwp.SampleApp.Droid.csproj
@@ -23,7 +23,7 @@
     <MonoAndroidResourcePrefix>Resources</MonoAndroidResourcePrefix>
     <MonoAndroidAssetsPrefix>Assets</MonoAndroidAssetsPrefix>
     <AndroidEnableSGenConcurrent>true</AndroidEnableSGenConcurrent>
-    <AndroidUseAapt2>true</AndroidUseAapt2>
+    <AndroidUseAapt2>false</AndroidUseAapt2>
     <AndroidHttpClientHandlerType>Xamarin.Android.Net.AndroidClientHandler</AndroidHttpClientHandlerType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
