--- a/Microsoft.Toolkit.Uwp.SampleApp.Droid/Properties/AndroidManifest.xml
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Droid/Properties/AndroidManifest.xml
@@ -1,6 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" android:versionCode="1" android:versionName="1.0" package="uno.platform.microsoft.toolkit.uwp.sampleapp.droid" android:installLocation="auto">
-	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="26" />
-	<application android:allowBackup="true" android:label="Microsoft.Toolkit.Uwp.SampleApp.Droid" android:supportsRtl="true" android:theme="@style/AppTheme"></application>
+	<uses-sdk android:minSdkVersion="21" android:targetSdkVersion="28" />
+	<application android:allowBackup="true" android:label="Microsoft.Toolkit.Uwp.SampleApp.Droid" android:supportsRtl="true" android:theme="@style/AppTheme">
+		<activity android:name="microsoft.identity.client.BrowserTabActivity">
+			<intent-filter>
+				<action android:name="android.intent.action.VIEW" />
+				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="android.intent.category.BROWSABLE" />
+				<data android:scheme="msala7d8cef0-4145-49b2-a91d-95c54051fa3f" android:host="auth" />
+			</intent-filter>
+		</activity>
+	</application>
 	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 </manifest>
