--- a/Microsoft.Toolkit.Uwp.SampleApp.Droid/Microsoft.Toolkit.Uwp.SampleApp.Droid.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Droid/Microsoft.Toolkit.Uwp.SampleApp.Droid.csproj
@@ -87,6 +87,9 @@
     <PackageReference Include="Microsoft.Graph">
       <Version>1.17.0</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Graph.Auth">
+      <Version>1.1.0-preview.0</Version>
+    </PackageReference>
     <PackageReference Include="Microsoft.Identity.Client">
       <Version>4.3.1</Version>
     </PackageReference>
