--- a/Microsoft.Toolkit.Uwp.SampleApp.Wasm/Microsoft.Toolkit.Uwp.SampleApp.Wasm.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Wasm/Microsoft.Toolkit.Uwp.SampleApp.Wasm.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <IsPackable>false</IsPackable>
@@ -34,7 +34,7 @@
       
   <ItemGroup>
     <PackageReference Include="Uno.UI" Version="1.46.228-dev.2699" />
-    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.0.0-dev.298" />
+    <PackageReference Include="Uno.Wasm.Bootstrap" Version="1.0.0-dev.302" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging.Filter" Version="1.1.1" />
     <PackageReference Include="Microsoft.TypeScript.Compiler" Version="2.8.3" />
@@ -67,7 +67,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Remove="manifest.json" />
     <None Remove="tsconfig.json" />
     <None Remove="web.config" />
   </ItemGroup>
