--- a/Microsoft.Toolkit.Uwp.SampleApp.Droid/Microsoft.Toolkit.Uwp.SampleApp.Droid.csproj
+++ b/Microsoft.Toolkit.Uwp.SampleApp.Droid/Microsoft.Toolkit.Uwp.SampleApp.Droid.csproj
@@ -70,6 +70,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <AndroidAsset Include="Assets\Fonts\winjs-symbols.ttf" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Properties\AndroidManifest.xml" />
     <None Include="Assets\AboutAssets.txt" />
